@@ -48,15 +48,15 @@ public class InitHolderComperator implements Comparator<InitHolder>
 		InitHolder i2 = o2;
 		SystemInitiative init1 = i1.getInitiative();
 		SystemInitiative init2 = i2.getInitiative();
-		Integer initval1 = new Integer(init1.getCurrentInitiative());
-		Integer initval2 = new Integer(init2.getCurrentInitiative());
+		Integer initval1 = Integer.valueOf(init1.getCurrentInitiative());
+		Integer initval2 = Integer.valueOf(init2.getCurrentInitiative());
 
 		if (initval1 != initval2)
 		{
 			return initval2.compareTo(initval1);
 		}
-		Integer dexval1 = new Integer(init1.getAttribute().getValue());
-		Integer dexval2 = new Integer(init2.getAttribute().getValue());
+		Integer dexval1 = Integer.valueOf(init1.getAttribute().getValue());
+		Integer dexval2 = Integer.valueOf(init2.getAttribute().getValue());
 
 		return dexval1.compareTo(dexval2);
 	}
